--- a/requirements-200823.txt
+++ b/requirements-200823.txt
@@ -3,6 +3,7 @@ astroid==2.15.6
 asttokens==2.2.1
 attrs==23.1.0
 backcall==0.2.0
+black==23.7.0
 blinker==1.6.2
 cachetools==5.3.1
 certifi==2023.7.22
@@ -16,6 +17,7 @@ dill==0.3.7
 distlib==0.3.7
 executing==1.2.0
 filelock==3.12.2
+flake8==6.1.0
 gitdb==4.0.10
 GitPython==3.1.32
 greenlet==2.0.2
@@ -36,11 +38,13 @@ MarkupSafe==2.1.3
 matplotlib-inline==0.1.6
 mccabe==0.7.0
 mdurl==0.1.2
+mypy-extensions==1.0.0
 nest-asyncio==1.5.7
 numpy==1.25.2
 packaging==23.1
 pandas==2.0.3
 parso==0.8.3
+pathspec==0.11.2
 pickleshare==0.7.5
 Pillow==9.5.0
 pipenv==2023.7.23
@@ -51,7 +55,9 @@ protobuf==4.24.2
 psutil==5.9.5
 pure-eval==0.2.2
 pyarrow==13.0.0
+pycodestyle==2.11.0
 pydeck==0.8.0
+pyflakes==3.1.0
 Pygments==2.16.1
 pylint==2.17.5
 Pympler==1.0.1
