--- a/requirements-200823.txt
+++ b/requirements-200823.txt
@@ -7,6 +7,7 @@ black==23.7.0
 blinker==1.6.2
 cachetools==5.3.1
 certifi==2023.7.22
+cfgv==3.4.0
 charset-normalizer==3.2.0
 click==8.1.7
 colorama==0.4.6
@@ -21,10 +22,13 @@ flake8==6.1.0
 gitdb==4.0.10
 GitPython==3.1.32
 greenlet==2.0.2
+identify==2.5.27
 idna==3.4
 importlib-metadata==6.8.0
 ipykernel==6.25.1
 ipython==8.14.0
+ipython-genutils==0.2.0
+ipython-sql==0.5.0
 isort==5.12.0
 jedi==0.19.0
 Jinja2==3.1.2
@@ -40,6 +44,7 @@ mccabe==0.7.0
 mdurl==0.1.2
 mypy-extensions==1.0.0
 nest-asyncio==1.5.7
+nodeenv==1.8.0
 numpy==1.25.2
 packaging==23.1
 pandas==2.0.3
@@ -50,6 +55,9 @@ Pillow==9.5.0
 pipenv==2023.7.23
 platformdirs==3.10.0
 plotly==5.16.1
+pre-commit==3.3.3
+prettier==0.0.7
+prettytable==3.8.0
 prompt-toolkit==3.0.39
 protobuf==4.24.2
 psutil==5.9.5
@@ -64,7 +72,9 @@ Pympler==1.0.1
 python-dateutil==2.8.2
 pytz==2023.3
 pytz-deprecation-shim==0.1.0.post0
+pyupgrade==3.10.1
 pywin32==306
+PyYAML==6.0.1
 pyzmq==25.1.1
 referencing==0.30.2
 requests==2.31.0
@@ -72,10 +82,12 @@ rich==13.5.2
 rpds-py==0.9.2
 six==1.16.0
 smmap==5.0.0
-SQLAlchemy==1.4.0
+SQLAlchemy==2.0.20
+sqlparse==0.4.4
 stack-data==0.6.2
 streamlit==1.26.0
 tenacity==8.2.3
+tokenize-rt==5.2.0
 toml==0.10.2
 tomlkit==0.12.1
 toolz==0.12.0
